<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_offers_notifications"
        android:summary="@string/pref_summary_new_offers_notification"
        android:defaultValue="true" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:key="notifications_subscription"
        android:title="@string/pref_title_subscription"
        android:summary="@string/pref_summary_sunscription_notification"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="notifications_updates"
        android:title="@string/pref_title_updates"
        android:summary="@string/pref_summary_updates_notification"
        android:defaultValue="true" />

</PreferenceScreen>
