<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/relative1"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    android:layout_height="match_parent"
    tools:context="fragments.Gins">
    <include android:id="@+id/toolBar" layout="@layout/toolbar_top"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rum_flavor"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:padding="15dp"
                android:id="@+id/ginFlavor" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flavor_rum_spinner"
                android:padding="15dp"
                android:spinnerMode="dialog"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/glass_pref"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:padding="15dp"
                android:id="@+id/textView5" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/short_glass"
                    android:id="@+id/short_glass"
                    android:layout_weight="1" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/long_glass"
                    android:id="@+id/long_glass"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"

                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stroll"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:padding="15dp"
                        android:id="@+id/textView3" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:layout_weight="1"
                        android:id="@+id/yesCheck" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:layout_weight="1"
                        android:id="@+id/noCheck" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:id="@+id/linear_spinner_ref"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/refreshment_flavor"
                    android:padding="15dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:id="@+id/textView6" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:layout_weight="0.5"
                    android:id="@+id/refreshment_spinner" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="20sp"
                android:hint="@string/sxolia"
                android:id="@+id/editText_rum" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/cart"
                    android:id="@+id/button_rum" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
